[metadata]
name = rebase_report
summary = Generates rebase report
description-file =
    README.md
author = Daniel Park
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    rebase_report
data_files =
    etc/rebase_report =
        rebase.html
        rebase.sql

[entry_points]
console_scripts =
    git = rebase_report.cmd:main
